joplin-manifest/joplin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin
  labels:
    app: joplin
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: joplin
  template:
    metadata:
      labels:
        app: joplin
    spec:
      nodeSelector:
        node-role.kubernetes.io/agent: "true"
      containers:
      - name: joplin
        image: redrathnure/joplin
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: joplin
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: joplin
