joplin-manifest/joplin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-joplin
  namespace: joplin-system
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik-system
  hostnames:
  - joplin.local #Hostname to backend service
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: joplin
      kind: Service
      port: 80
